[tool.poetry]
name = "python-example-project"
version = "0.1.0"
description = ""
authors = ["Manuel Eibl <manuel.eibl@paessler.com>"]

[tool.poetry.dependencies]
python = "^3.11.2"
Flask = "==2.2.3"
Faker = "==18.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
